Moving towards using the new-style filtering. ConfigurableElementFilter should be now converted to it.